--- a/Website (Node and HBS)/package.json
+++ b/Website (Node and HBS)/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
+    "hbs": "^4.2.0",
     "jquery": "^3.6.4",
     "jsdom": "^21.1.1"
   },
