--- a/Website (Node and HBS)/package.json
+++ b/Website (Node and HBS)/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
+    "body-parser": "^1.20.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
