--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=ticket-website:* npm run devstart"
+    "serverstart": "DEBUG=ticket-website:* npm run devstart",
+    "db": "node database.js"
   },
   "author": "",
   "license": "ISC",
