--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^21.1.1",
     "method-override": "^3.0.0",
     "mysql2": "^3.2.3",
+    "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "stripe": "^12.2.0"
