--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node index.js",
     "devstart": "nodemon ./bin/www",
     "serverstart": "DEBUG=ticket-website:* npm run devstart",
     "db": "node database.js"
